# vinctor-core

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPEN-issues.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
demo/: auto_approval_dry_run_demo.py  auto_approval_http_admin_demo.py  auto_approval_service_path_demo.py  boundary_admin_http_demo.py  boundary_registry_core_e2e.py  claude_code_design_partner_e2e_setup.py  git_repo_boundary_demo.py  grant_lifecycle_demo.py  grant_request_lifecycle_demo.py  in_memory_v1_service_demo.py  local_operator_flow_demo.py  local_service_bootstrap_demo.py  local_service_launch_helper_demo.py  local_v1_http_service_demo.py  manual_review_required_demo.py  mock_vinctor_service_demo.py  operator_storage_ops_demo.py  read_only_mcp_server_demo.py  self_hostable_service_demo.py  sqlite_boundary_registry_demo.py  sqlite_grant_audit_demo.py  sqlite_v1_service_demo.py  v1_http_contract_demo.py
docs/: api-contract.md  cli-design.md  cli-reference.md  demo-service-runbook.md  git-boundary-demo-scenario.md  local-hook-runbook.md  mcp-server.md  next-actions.md  performance.md  threat-model.md
tests/: conftest.py  test_access_log.py  test_agent_enforcement_settings_repository.py  test_audit.py  test_audit_anchor.py  test_audit_chain.py  test_audit_export.py  test_audit_hash_chain_sqlite.py  test_audit_list_filtered.py  test_auditor_rbac.py  test_auto_approval.py  test_auto_approval_http.py  test_boundary_http_contract.py  test_boundary_registry.py  test_claude_code_design_partner_e2e.py  test_cli.py  test_cli_audit_verify.py  test_control_plane_audit.py  test_delegated_enforce_contract.py  test_delegated_enforce_http_contract.py  test_durable_pop_cache.py  test_enforce.py  test_grant_lifecycle.py  test_grant_repositories.py  test_grant_request_http_status.py  test_grant_request_lifecycle.py  test_in_memory_v1_service.py  test_infer.py  test_key_ops.py  test_keys.py  test_local_admin.py  test_local_http.py  test_local_http_concurrency.py  test_local_launcher.py  test_mcp_server.py  test_mcp_server_cli.py  test_mcp_service_client.py  test_mcp_stdio_integration.py  test_mcp_tools.py  test_metrics.py  (+40 more)
tools/: check-public-snapshot.sh  loadtest.py  mock_vinctor_service.py
(+152 files in other folders)
