[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vinctor-core"
version = "0.1.0"
description = "Deterministic authorization core for mediated AI-agent actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]
license = "MIT"
authors = [
  { name = "Vinctor contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
vinctor = "vinctor_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vinctor_core", "src/vinctor_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
