[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vinctor-core"
version = "0.4.0"
description = "Deterministic authorization core for mediated AI-agent actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]
license = "MIT"
authors = [
  { name = "Vinctor contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://vinctor.dev"
Repository = "https://github.com/vinctor-ai/vinctor-core"
Documentation = "https://vinctor.dev/docs"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.8",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
vinctor = "vinctor_service.cli:main"
vinctor-mcp-server = "vinctor_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vinctor_core", "src/vinctor_service", "src/vinctor_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
